# MUD-Manager

./: .gitignore  APIDOCS.txt  DataModel.txt  LICENSE  Makefile.am  Makefile.in  README.md  acl.h  acl_types.c  acl_types.h  aclocal.m4  cisco_dacl.c  cisco_dacl.h  config.h.in  configure  configure.ac  log.c  log.h  mud_fs_client.c  mud_fs_client.h  mud_manager.c  mud_manager_conf.json  mud_test_client.c  sessions.c  sessions.h  test_client.c
civetweb/: LICENSE.txt
dbtools/: Makefile.am  Makefile.in  mud_clobber_db  mud_show_db
examples/: mud_manager_conf.json
examples/AAA-LLDP-DHCP/: FR-diffs.txt  FR-setup.sh  README.md  README.txt  kick_radius.sh
examples/certs_and_keys/: README.md  env-80211ARintermediate.sh  env-intermediate.sh  env-root.sh  generate-8021AR-iDevID.sh  generate-ca-8021AR.sh  generate-ca-root.sh  generate-freeradius-cert.sh  generate-iDevID-8021AR.sh  generate-intermediate-ca.sh  generate-root-ca.sh  openssl-8021ARintermediate.cnf  openssl-root.cnf  run.sh
examples/luminaire/: README.md  README.txt  luminaire-cacert.pem  luminaire_conf.json  test_client_output.txt
examples/luminaire/fs/: Luminaire_150.json  Luminaire_150.p7s  MUD_FS_HTTPS_cert.pem  MUD_FS_HTTPS_key.pem  mud_https_server.py  start_https_mudserver.sh
src/: Makefile.am  Makefile.am~  Makefile.in  Makefile~  acl.h  cisco_dacl.c  cisco_dacl.h  log.c  log.h  mud_fs_client.c  mud_manager.c  mud_manager.h  sessions.c
webui/: .#style.css  Makefile.am  Makefile.in  edit.css  funcs.php  index.php  mm.js  mud-edit.php  mud-home.php  show-acl-policy.php  statics.php  style.css
